--- a/index.html
+++ b/index.html
@@ -11,10 +11,18 @@
     <selection class="conteudo-principal"></selection>
     <h2 class=”titulo-principal”>Meus Objetivos do ano<span>_<span></h2>
     <div class="botoes">
-        <button class="botao">Cursos na Alura</button>
-        <button class="botao">Criar um Projeto em JavaScript</button>
-        <button class="botao">Criar um portfólio</button>
-        <button class="botao">Atualizar meu currículo</button>
+        <button class=»botao ativo»>Cursos na Alura</button>
+        <button class=»botao»>Criar um Projeto em JavaScript</button>
+        <button class=»botao»>Criar um portfólio</button>
+        <button class=»botao»>Atualizar meu currículo</button>
     </div>
-</body>
-</html>
+<script src=»main.js»></script>
+    <body>
+            <section class=»conteudo-principal»></section>
+            
+            ano<span>_<span></h2>
+            <div class=»botoes»> 
+                ...
+            </div>
+            <script src=»main.js»></script>
+            </body>
